--- a/config.json
+++ b/config.json
@@ -16,13 +16,19 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "JOY-BOT",
+    "BOTNAME": "Baby-🥰🍒",
     "PREFIX": ".",
     "ADMINBOT": [
-        "100001435123762"
+        "100088836995808",
+        "61575791445818",
+        "61579261550244",
+        "100029990749091"
     ],
     "NDH": [
-        "100001435123762"
+        "100088836995808",
+        "61575791445818",
+        "61579261550244",
+        "100029990749091"
     ],
     "DATABASE": {
         "sqlite": {
