--- a/config.json
+++ b/config.json
@@ -16,18 +16,12 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Baby-🥰🍒",
+    "BOTNAME": "আত-তাক্বওয়া ফাউন্ডেশন🕋🤲",
     "PREFIX": ".",
     "ADMINBOT": [
-        "100088836995808",
-        "61575791445818",
-        "61579261550244",
-        "100029990749091"
+         "100029990749091"
     ],
     "NDH": [
-        "100088836995808",
-        "61575791445818",
-        "61579261550244",
         "100029990749091"
     ],
     "DATABASE": {
